Updated survey details api to add overall rating
